# tcp_chat

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
include/chat/: chat.h  filter.h  format_msg.h  message.h  net.h
include/user_auth/: read_info.h  user_auth.h
include/util/: util_macros.h
src/: app  app.c  filter.c  read_info.c  user_auth.c  userdata
src/chat/: filter.c  format_msg.c  message.c  net.c
src/user_auth/: login.c  logout.c  nlock_file.c  signup.c  user_auth.c
